--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,18 @@
 .App {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
+  gap: 2.5em;
+  overflow-x: hidden;
+}
+.scroll{
+  width: 50%;
+  height: 500px;
+  max-height: 500px;
+  overflow-y: scroll;
 }
 
 .App-logo {
