--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -14,7 +15,13 @@
   max-height: 500px;
   overflow-y: scroll;
 }
-
+.footer{
+  width: 100%;
+  height: 10vh;
+  background-color: red;
+  display: flex;
+  gap: 15px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
