--- a/src/component/Child/child.scss
+++ b/src/component/Child/child.scss
@@ -4,6 +4,9 @@
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-position: 'center';
-
+    .text{
+        cursor: pointer;
+        color: blue;
+    }
 
 }
